<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="#0077b5"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Search"
            android:layout_margin="10dp"
            android:textSize="22sp"
            android:textColor="#ffffff"/>


    </LinearLayout>


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:padding="10dp">


           <EditText
               android:id="@+id/searchtext"
               android:layout_width="230dp"
               android:layout_height="wrap_content"
               android:layout_marginBottom="10dp"
               android:layout_marginStart="10dp"
               android:drawablePadding="15dp"
               android:layout_marginTop="10dp"
               android:drawableStart="@drawable/search"
               android:hint="@string/search_hint"
               android:inputType="textAutoComplete"
               android:singleLine="true"
               android:textColor="#333333"
               android:textColorHint="#333333" />


           <android.support.v7.widget.AppCompatButton
               android:id="@+id/send_enter"
               android:layout_width="80dp"
               android:layout_height="40dp"
               android:layout_marginStart="5dp"
               android:layout_marginBottom="10dp"
               android:layout_marginTop="5dp"
               android:background="@drawable/start_button"
               android:fontFamily="sans-serif"
               android:text="@string/search"
               android:textAllCaps="false"
               android:textColor="#ffffff" />

       </LinearLayout>

        <GridView
            android:id="@+id/gridviewss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:numColumns="2"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:background="#ffffff"
        android:id="@+id/norecords"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no"
            android:textSize="25sp"
            android:gravity="center_horizontal"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/searchprogress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#bc000000"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:indeterminate="true" />
    </RelativeLayout>

</RelativeLayout>